# lurch

./: .gitignore  README.md
agents/baphomet/: CMakeLists.txt  dispatch.cpp  main.cpp  main.hpp
agents/baphomet/include/: anti_analysis.hpp  common.hpp  dispatch.hpp  filesystem.hpp  function_ptrs.hpp  http.hpp  injection.hpp  macro.hpp  main.hpp  misc.hpp  reconaissance.hpp  shell.hpp  sleep.hpp  structs.hpp
agents/baphomet/networking/: init.cpp  init.hpp  recieve.cpp  recieve.hpp  send.cpp  send.hpp
agents/baphomet/networking/http/: http.hpp  init.cpp  recieve.cpp  send.cpp
agents/baphomet/obfuscation/: sleep.cpp  sleep.hpp
agents/baphomet/reconaissance/: basic.cpp  basic.hpp  procenum.cpp  procenum.hpp  reconaissance.hpp  screenshot.cpp  screenshot.hpp
agents/baphomet/src/: main.cpp
agents/baphomet/src/networking/http/: init.cpp  recieve.cpp  send.cpp
agents/baphomet/src/obfuscation/: sleep.cpp
agents/baphomet/src/reconaissance/: basic.cpp  keylogger.cpp  procenum.cpp  screenshot.cpp  whoami.cpp
agents/baphomet/src/reconnaissance/: basic.cpp  keylogger.cpp  procenum.cpp  screenshot.cpp  whoami.cpp
agents/baphomet/src/tasking/basic/: anti_analysis.cpp  filesystem.cpp  shell.cpp
agents/baphomet/src/tasking/injection/: beacon_api.cpp  runbof.cpp  rundll.cpp  runexe.cpp  shellcode.cpp
agents/baphomet/src/util/: basic.cpp  controlflow_guard.cpp  dispatch.cpp  hash.cpp  init_config.cpp  io.cpp  memory.cpp
agents/baphomet/tasking/basic/: filesystem.cpp  filesystem.hpp  shell.cpp  shell.hpp
agents/baphomet/tasking/injection/: beacon_api.hpp  injection.hpp  runbof.cpp  rundll.cpp  runexe.cpp  shellcode.cpp
agents/baphomet/tasking/injection/bof/: beacon_api.cpp  beacon_api.hpp  runbof.cpp
agents/baphomet/tasking/injection/dll/: rundll.cpp
agents/baphomet/tasking/injection/exe/: runexe.cpp
agents/baphomet/tasking/injection/shellcode/: shellcode.cpp
agents/baphomet/tasking/misc/: basic.cpp  memory.cpp  misc.cpp  misc.hpp
agents/baphomet/util/: common.hpp  function_ptrs.hpp  hash.cpp  io.cpp  io.hpp  macro.hpp  structs.hpp
app/: build_script.txt  config.json  logfile.txt
app/javascript/login/: login.js
app/javascript/main/: callbacks.js  fetch.js  main.js  observer.js  templating.js  transitions.js  ui.js  util.js  ws.js
app/server/: CMakeLists.txt  main.cpp
app/server/components/: database.cpp  instance.cpp  instance.hpp  object_tree.cpp  router.cpp
app/server/components/database/: fileman.cpp  misc.cpp  queries.cpp  restore_objects.cpp
app/server/components/eventlog/: eventlog.cpp
app/server/components/instance/: config.cpp  instance.cpp  misc.cpp  ssl.cpp
app/server/components/routing/: endpoints.cpp  handlers.cpp  misc.cpp  websocket.cpp
app/server/components/tree/: misc.cpp  send.cpp
app/server/include/: argument_parser.hpp  baphomet.hpp  base.hpp  basic.hpp  chatroom.hpp  command_types.hpp  common.hpp  components.hpp  defer.hpp  enums.hpp  group.hpp  io.hpp  listeners.hpp  macro.hpp  root.hpp  structs.hpp  templating.hpp  wintypes.hpp
app/server/objects/agent/: agent.cpp  agent.hpp  baphomet.cpp  baphomet.hpp
app/server/objects/agent/baphomet/: baphomet.hpp  init_cmd.cpp  receive.cpp  tasks.cpp
app/server/objects/base/: base.cpp  base.hpp
app/server/objects/group/: group.cpp  group.hpp
app/server/objects/root/: root.cpp  root.hpp
app/server/objects/root/generic_root/: init_cmd.cpp  receive.cpp  root.hpp  tasks.cpp
app/server/src/: main.cpp
app/server/src/components/database/: fileman.cpp  misc.cpp  queries.cpp  queries_delete.cpp  queries_get.cpp  queries_store.cpp  restore_listeners.cpp  restore_objects.cpp
app/server/src/components/eventlog/: eventlog.cpp
app/server/src/components/instance/: config.cpp  instance.cpp  misc.cpp  ssl.cpp
app/server/src/components/routing/: endpoints.cpp  handlers.cpp  listeners.cpp  misc.cpp  websocket.cpp
app/server/src/components/tree/: misc.cpp  send.cpp
app/server/src/objects/agent/: baphomet_init_cmd.cpp  baphomet_misc.cpp  baphomet_payloadgen.cpp  baphomet_receive.cpp  baphomet_tasks_agent.cpp  baphomet_tasks_user.cpp  init_cmd.cpp  receive.cpp  tasks.cpp
app/server/src/objects/base/: base.cpp
app/server/src/objects/group/: genericgroup_init_cmd.cpp  genericgroup_receive.cpp  genericgroup_tasks.cpp  group.cpp
app/server/src/objects/root/: init_cmd.cpp  receive.cpp  root_init_cmd.cpp  root_receive.cpp  root_tasks.cpp  tasks.cpp
app/server/src/util/: argument_parser.cpp  basic.cpp  io.cpp  templating.cpp
app/server/util/: argument_parser.cpp  argument_parser.hpp  common.cpp  common.hpp  io.cpp  io.hpp  structs.hpp
app/static/html/: index.html  login.html
app/static/scripts/: login.js  main.js
app/static/scripts/login/: login.js
app/static/scripts/main/: fetch.js  main.js  observer.js  templating.js  ui.js  ws.js
app/static/stylesheets/: login.css  main.css
app/static/templates/: index.html  login.html
